Fixed some design issues on mobile

--- a/styles/AtomicInputWithButton.module.css
+++ b/styles/AtomicInputWithButton.module.css
@@ -1,4 +1,5 @@
 .form {
+  display: flex;
   height: 40px;
   width: 100%;
 }
@@ -7,6 +8,7 @@
   height: 100%;
   width: 75%;
   padding-left: 10px;
+  border-radius: 0;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border: 1px solid var(--lightGrey);
